@@ -1,5 +1,12 @@
 2011-04-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
+	* FiltersToolbox/skeleton_label.m: v0.3.3
+
+	- Use new slow mode in graph_nn() to avoid running out of
+	memory. Either method is, however, too slow, with a expected 35
+	min to partition a 468x159x475 image with only 16510 skeleton
+	voxels.
+
 	* PointToolbox/graph_nn.m: v0.2.0
 
 	- Add new input argument FAST, to choose between running it in
